--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -c -mcpu=cortex-m4 -mthumb
 all: main.o
 
 main.o: main.c
-	$(CC) $(CFLAGS) main.c -o main.o
+	$(CC) $(CFLAGS) $< -o $@
 
 clean:
 	rm -f *.o
