--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,12 @@
 CC = arm-none-eabi-gcc
-CFLAGS = -c -mcpu=cortex-m4 -mthumb
+CFLAGS = -c -mcpu=cortex-m4 -mthumb -O0 # -O0 retira as optimizações automáticas do compilador
 
-all: main.o
+all: startup.o main.o
 
 main.o: main.c
+	$(CC) $(CFLAGS) $< -o $@
+
+startup.o: startup.c
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
