Make mais elegante, definição de regra genérica para .o

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,9 @@
 CC = arm-none-eabi-gcc
-CFLAGS = -c -mcpu=cortex-m4 -mthumb -O0 # -O0 retira as optimizações automáticas do compilador
+CFLAGS = -c -mcpu=cortex-m4 -mthumb -O0 
 
 all: startup.o main.o
 
-main.o: main.c
-	$(CC) $(CFLAGS) $< -o $@
-
-startup.o: startup.c
+%.o: %.c
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
