--- a/src/Makefile
+++ b/src/Makefile
@@ -4,19 +4,21 @@ CC = arm-none-eabi-gcc
 LD = arm-none-eabi-gcc
 CP = arm-none-eabi-objcopy
 CFLAGS = -c -mcpu=cortex-m4 -mthumb -Wall -O0
-LFLAGS = -nostdlib -T stm32f411-rom.ld
+LFLAGS = -nostdlib -T stm32f401-rom.ld
 
 OBJS = 	startup.o\
 		main.o\
 
-all: $(PROG).elf
+all: $(PROG).elf $(PROG).bin
 
 $(PROG).elf: $(OBJS)
-	$(LD) $(LFLAGS) $^ -o $@ $(CP) 
-	$(PROG).elf -O binary $(PROG).bin
+	$(LD) $(LFLAGS) $^ -o $@
+
+$(PROG).bin: $(PROG).elf
+	$(CP) $(PROG).elf -O binary $(PROG).bin
 
 %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
 
 clean:
-	rm -f $(OBJS) $(PROG).elf
+	rm -f $(OBJS) $(PROG).elf $(PROG).bin
